--- a/cqrs_project/pom.xml
+++ b/cqrs_project/pom.xml
@@ -46,12 +46,18 @@
 		    <groupId>org.axonframework</groupId>
 		    <artifactId>axon-spring-boot-starter</artifactId>
 		    <version>4.6.2</version>
-		    <excludes>
-				<exclude>
+		    <exclusions>
+				<exclusion>
 					<groupId>org.axonframework</groupId>
 					<artifactId>axon-server-connector</artifactId>
-				</exclude>
-			</excludes>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>8.0.0.Final</version>
 		</dependency>
 	</dependencies>
 	
